2003-06-11  Moritz Schulte  <moritz@g10code.com>

	* global.c (global_init): Call: _gcry_cipher_init, _gcry_md_init,
	_gcry_pk_init.

	* g10lib.h: Declare: _gcry_cipher_init, _gcry_md_init,
	_gcry_pk_init.
	
	* global.c (gcry_strerror): Remove compatibility code.

	* Makefile.am: Remove support libgpg-error special handling.
	(AM_CPPFLAGS): Add @GPG_ERROR_CFLAGS@

	* gcrypt.h: Likewise.

2003-06-13  Werner Koch  <wk@gnupg.org>

	* gcrypt.h (gcry_md_get_algo): Reverted to old API.  This is a
	convenience function anyway and error checking is not approriate.
	(gcry_md_is_enabled): New.
	(gcry_md_is_secure): Replaed macro by function and reverted to old
	API.

2003-06-11  Werner Koch  <wk@gnupg.org>

	* gcrypt.h (GCRYERR): Define _GCRY_ERR_SOURCE_DEFAULT instead of
	GPG_ERR_SOURCE_DEFAULT, so that libgpg-error still works despite
	the use of the old gcrypt error codes.
	(gcry_md_copy): Swapped arguments.
	
2003-06-09  Moritz Schulte  <moritz@g10code.com>

	* Makefile.am: Support for libgpg-error.

2003-06-08  Moritz Schulte  <moritz@g10code.com>

	* sexp.c (gcry_sexp_create): Expect sane error values from
	gcry_sexp_canon_len instead of the `historical' values.

2003-06-07  Moritz Schulte  <moritz@g10code.com>

	* ath.c, ath.c, ath-pth.c, ath-pthread.c, benchmark.c, cipher.h,
	g10lib.h, gcrypt.h, global.c, misc.c, missing-string.c, module.c,
	mpi.h, secmem.c, secmem.h, sexp.c, stdmem.c, stdmem.h, testapi.c,
	types.h: Edited all preprocessor instructions to remove whitespace
	before the '#'.  This is not required by C89, but there are some
	compilers out there that don't like it.  Replaced any occurence of
	the now deprecated type names with the new ones.
	
	* gcrypt.h: Re-organized checking for gcc features; New macro:
	_GCRY_GCC_ATTR_DEPRECATED.
	Include copy of libgpg-error's gpg-error.h in order to make it
	easy to build libgcrypt without needing libgpg-error.h.

	(GCRY_MPI, GcryMPI, GCRY_SEXP, GcrySexp, GCRY_CIPHER_HD,