@@ -121,11 +121,4 @@ typedef union {
     double g;
 } PROPERLY_ALIGNED_TYPE;
 
-typedef struct string_list {
-    struct string_list *next;
-    unsigned int flags;
-    char d[1];
-} *STRLIST;
-
-
 #endif /*GCRYPT_TYPES_H*/
